Fix margin Competitions section mobile

--- a/scss/blocks/competitions/__deco-board/_competitions__deco-board.scss
+++ b/scss/blocks/competitions/__deco-board/_competitions__deco-board.scss
@@ -2,4 +2,5 @@
   position: relative;
   bottom: 0;
   right: 0;
+  margin-top: 60px;
 }
